[package]
name = "entity"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
axum-login = { version = "*" }
uuid = { version = "1.8.0", features = ["serde", "v4"] }

[dependencies.sea-orm]
version = "1.0.0-rc.6" # sea-orm version