[package]
name = "unbound-tome-web"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]

axum = { version = "0.7.5", features = ["macros", "tracing"] }
axum-login = "0.15"
axum-extra = "0.9.3"
axum-htmx = {  version = "0.5.0", features = ["serde", "tower", "guards"] }
miette = { version = "7.2.0", features = ["fancy", "serde"] }
# axum-template = { version = "2.3.0", features = ["minijinja", "minijinja-autoreload"] }
tokio = { version = "1.38.0", features = ["full"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
async-trait = "0.1.80"
oauth2 = "4.4.2"
hyper = "1.3.1"
http = "1.1.0"
dotenvy = "0.15.7"
serde = "1.0.203"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
time = "0.3.36"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["trace"] }
password-auth = { version = "1.0.0" }
thiserror = "1.0.61"
#sqlx = { version = "0.7.4", features = ["postgres", "time", "runtime-tokio", "json", "uuid"] }
uuid = { version = "1.8.0", features = ["serde", "v4"] }
maud = { version = "*", features = ["axum"] }

unbound-tome-service = { path = "../service" }
entity = { path = "../entity" }
migration = { path = "../migration" }